Renamed the file names in correct order

--- a/game.html
+++ b/game.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game by Ritwik</title>
-    <link rel="stylesheet" href="style.css">
-    <script async defer src="./script.js"></script>
+    <link rel="stylesheet" href="game.css">
+    <script async defer src="./game.js"></script>
 </head>
 
 <body>
