--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slot Game By Ritwik Pal</title>
-    <link rel="stylesheet" href="./welcome.css">
-    <script async defer src="./welcome.js"></script>
+    <link rel="stylesheet" href="./index.css">
+    <script async defer src="./index.js"></script>
 </head>
 
 <body>
