fixed issues related to display, speed and added the game status bar

--- a/game.html
+++ b/game.html
@@ -11,8 +11,12 @@
 
 <body>
     <a href="./menu.html" id="back">New Game</a>
+    <div class="divStats">
+        <h1 id="h1Stats">Spin the Wheel</h1>
+    </div>
     <div>
         <div class="machine">
+
             <div class="slot" id="slot1">
                 <div class="value" id="value1">😁</div>
             </div>
