--- a/index.html
+++ b/index.html
@@ -6,22 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slot Game By Ritwik Pal</title>
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <script async defer src="./index.js"></script>
 </head>
 
 <body>
-    <div id="outerwrap">
-        <div id="welcome">
-            WELCOME
-        </div>
-        <div id="to">
-            TO
-        </div>
-        <div id="game">
-            SLOT MACHINE GAME
+    <div class="outerwrap">
+        <div class="innerwrap">
+            <div id="welcome">
+                <span class="glow-text">WELCOME</span>
+            </div>
+            <div id="to">
+                <span class="glow-text">TO</span>
+            </div>
+            <div id="game">
+                <span class="glow-text">SLOT MACHINE GAME</span>
+            </div>
+            <button class="btn btn-success" id="play">PLAY</button>
         </div>
     </div>
-    <a href="./menu.html" id="play">PLAY</a>
 </body>
 
 </html>
