--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
     <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <script async defer src="./menu.js"></script>
 </head>
 
@@ -13,10 +16,10 @@
     <div id="menu">
         <a href="./instructions.html" class="btnInMenu" id="btnInstruction">GO TO INSTRUCTIONS</a>
         <h2 style="text-align: center;">Enter the slot speed(1-10)(Optional):</h2>
-        <input type="number" name="" id="inpSpeed" min="1" max="10">
+        <input type="number" name="" id="inpSpeed" step="1" min="1" max="10" style="margin-bottom: 1rem;">
         <br>
-        <a href="./index.html" class="btnInMenu" id="btnBack">BACK</a>
-        <a href="./game.html" class="btnInMenu" id="btnNext">NEXT</a>
+        <a href="./index.html" class="btn btn-info btn-lg" id="btnBack">BACK</a>
+        <a href="./game.html" class="btn btn-info btn-lg" id="btnNext">NEXT</a>
     </div>
 
 </body>
